Versions cleanup, aarch64 smoke test
Do not run on mush to dev branch

JDK 24 not aarch64, WhiteList

Maven plugins reorg

Gitignore

GHA back to Docker

--add-opens has no effect at compile time